After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722266 - window-actor: Guard against %NULL frame mask
window-actor: Guard against %NULL frame mask
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
: 615635 688532 701599 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-01-15 14:36 UTC by Florian Müllner
Modified: 2016-01-26 18:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window-actor: Guard against %NULL frame mask (1.14 KB, patch)
2014-01-15 14:36 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2014-01-15 14:36:28 UTC
See patch. Some people have run into this on RHEL7 (https://bugzilla.redhat.com/show_bug.cgi?id=1051458).
Comment 1 Florian Müllner 2014-01-15 14:36:31 UTC
Created attachment 266363 [details] [review]
window-actor: Guard against %NULL frame mask

Creating a new cogl texture may fail, in which case the intent to
free it will crash. While something is clearly wrong (insanely
large window, oom, ...), crashing the WM is harsh and we should
try to avoid it if at all possible, so carry on.
Comment 2 Jasper St. Pierre (not reading bugmail) 2014-01-15 14:43:52 UTC
Review of attachment 266363 [details] [review]:

It means that the users will see incorrect window contents. I'm going to accept this, but only if we have a g_warning about it. Is there any place we can have diagnostics about why creating the texture failed?
Comment 3 drago01 2014-02-21 23:01:16 UTC
OK, Jon could reproduce that crash turns out that it is caused by (very) large windows that are over the texture size limit (because we cannot use sliced textures for the mask_texture as stated by the comment in the code).

So this patch has the side effect of having white corners for windows that shouldn't exit often in practice so we should go with it for now.
Comment 4 Florian Müllner 2014-02-28 15:49:06 UTC
Attachment 266363 [details] pushed as eb01163 - window-actor: Guard against %NULL frame mask
Comment 5 Florian Müllner 2014-04-26 08:04:27 UTC
*** Bug 701599 has been marked as a duplicate of this bug. ***
Comment 6 Florian Müllner 2014-06-02 14:04:45 UTC
*** Bug 688532 has been marked as a duplicate of this bug. ***
Comment 7 Rui Matos 2016-01-26 18:29:29 UTC
*** Bug 615635 has been marked as a duplicate of this bug. ***